force-app/main/default/objects/Price_Parameter__c/Price_Parameter__c.object-meta.xml
<CustomObject>
    <label>Price Parameter</label>
    <nameField>
        <displayFormat>PP-{00000000}</displayFormat>
        <label>Parameter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>