force-app/main/default/objects/Price_Parameter__c/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <description>Base Price</description>
    <inlineHelpText>Base Price</inlineHelpText>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>