force-app/main/default/objects/Price_Parameter__c/fields/Configuration_Option__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration Option</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Configuration_Option__c.isInstallationTime__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Configuration_Option__c</referenceTo>
    <relationshipLabel>Price Parameters</relationshipLabel>
    <relationshipName>Price_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>