force-app/main/default/objects/Price_Parameter__c/fields/Cost_Of_Goods_Sold__c.field-meta.xml
<CustomField>
    <fullName>Cost_Of_Goods_Sold__c</fullName>
    <description>refers to the business expenses directly tied to the production and sale of a company&apos;s goods and services</description>
    <formula>fxFactory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost of Goods Sold (COGS) refers to the business expenses directly tied to the production and sale of a company&apos;s goods and services</inlineHelpText>
    <label>Cost Of Goods Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>