force-app/main/default/objects/Price_Parameter__c/fields/Cost_Of_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Cost_Of_Revenue__c</fullName>
    <formula>fxFactory__c + fxCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Costs of revenue exist for ongoing contract services that can include raw materials, direct labor, shipping costs, and commissions paid to sales employees</inlineHelpText>
    <label>Cost Of Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>