force-app/main/default/objects/Price_Parameter__c/fields/CostType__c.field-meta.xml
<CustomField>
    <fullName>CostType__c</fullName>
    <description>Shows the Cost Type of the Product related to the Quote Line Item</description>
    <formula>TEXT(Product__r.Cost_Type__c)</formula>
    <inlineHelpText>The Cost Type of the Product related to the Quote Line Item</inlineHelpText>
    <label>CostType</label>
    <type>Text</type>
</CustomField>