force-app/main/default/objects/Price_Parameter__c/fields/Factory_Price__c.field-meta.xml
<CustomField>
    <fullName>Factory_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Factory Price</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>