force-app/main/default/objects/Price_Parameter__c/fields/fxConfigurationPlan__c.field-meta.xml
<CustomField>
    <fullName>fxConfigurationPlan__c</fullName>
    <formula>Configuration_Option__r.Configuration_Product__r.Configuration__c</formula>
    <label>Configuration Plan</label>
    <type>Text</type>
</CustomField>