force-app/main/default/objects/Price_Parameter__c/fields/fxConfigurationProduct__c.field-meta.xml
<CustomField>
    <fullName>fxConfigurationProduct__c</fullName>
    <formula>Configuration_Option__r.Configuration_Product__c</formula>
    <label>Configuration Product</label>
    <type>Text</type>
</CustomField>