force-app/main/default/objects/Price_Parameter__c/fields/fxCostPerUnit__c.field-meta.xml
<CustomField>
    <fullName>fxCostPerUnit__c</fullName>
    <description>Cost per Unit = Base Price * Factory Price OR Base Price * Product Cost</description>
    <formula>IF ( Min_Sales_Price__c &gt;0 ,
Min_Sales_Price__c + (Min_Sales_Price__c *( Cost_Multiplier__c -1)* (Transmission__c/100)),
Base_Price__c + (Base_Price__c *( Cost_Multiplier__c -1)* (Transmission__c/100)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cost per Unit</inlineHelpText>
    <label>Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>