force-app/main/default/objects/Price_Parameter__c/fields/fxDiscount__c.field-meta.xml
<CustomField>
    <fullName>fxDiscount__c</fullName>
    <formula>IF(AND(Unit_Price__c&gt;0,fxUnitSalesPrice__c&gt;0),(1 - ( Unit_Price__c/fxUnitSalesPrice__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>