force-app/main/default/objects/Price_Parameter__c/fields/fxInstallation__c.field-meta.xml
<CustomField>
    <fullName>fxInstallation__c</fullName>
    <formula>Product__r.Installation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation</label>
    <type>Checkbox</type>
</CustomField>