force-app/main/default/objects/Price_Parameter__c/fields/fxItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>fxItemQuantity__c</fullName>
    <formula>TEXT(Configuration_Option__r.Quantity__c)</formula>
    <label>Item Quantity</label>
    <type>Text</type>
</CustomField>