force-app/main/default/objects/Price_Parameter__c/fields/fxItemTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>fxItemTotalPrice__c</fullName>
    <description>Total Price per Line without Tax</description>
    <formula>Unit_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price per Line without Tax</inlineHelpText>
    <label>Item Total Price without Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>