force-app/main/default/objects/Price_Parameter__c/fields/fxListPrice__c.field-meta.xml
<CustomField>
    <fullName>fxListPrice__c</fullName>
    <formula>If( Price_Multiplier__c &gt; 0,  fxPricePerUnit__c  * Quantity__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxList</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>