force-app/main/default/objects/Price_Parameter__c/fields/fxProductCategory__c.field-meta.xml
<CustomField>
    <fullName>fxProductCategory__c</fullName>
    <formula>TEXT(Product__r.Product_Category__c)</formula>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>