force-app/main/default/objects/Price_Parameter__c/fields/fxProductCode__c.field-meta.xml
<CustomField>
    <fullName>fxProductCode__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>