force-app/main/default/objects/Price_Parameter__c/fields/fxProductGroup__c.field-meta.xml
<CustomField>
    <fullName>fxProductGroup__c</fullName>
    <description>Shows the Product Group of the Product related to the Pricing Item</description>
    <formula>TEXT(Product__r.Product_Group__c)</formula>
    <inlineHelpText>The Product Group of the Product related to the Pricing Item</inlineHelpText>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>