force-app/main/default/objects/Price_Parameter__c/fields/fxProductItem__c.field-meta.xml
<CustomField>
    <fullName>fxProductItem__c</fullName>
    <formula>TEXT(Product__r.Product_Item__c)</formula>
    <label>Product Item</label>
    <type>Text</type>
</CustomField>