force-app/main/default/objects/Price_Parameter__c/fields/fxProductSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>fxProductSerialNumber__c</fullName>
    <formula>Configuration_Option__r.Configuration_Product__r.RVN__c</formula>
    <label>Product Serial Number</label>
    <type>Text</type>
</CustomField>