force-app/main/default/objects/Price_Parameter__c/fields/fxProductType__c.field-meta.xml
<CustomField>
    <fullName>fxProductType__c</fullName>
    <formula>TEXT(Product__r.Product_Type__c)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>