force-app/main/default/objects/Price_Parameter__c/fields/fxSalesCode__c.field-meta.xml
<CustomField>
    <fullName>fxSalesCode__c</fullName>
    <description>Shows the Sales Code of the Product related to the Pricing Item</description>
    <formula>TEXT(Product__r.Product_Group__c)</formula>
    <inlineHelpText>The Sales Code of the Product related to the Pricing Item</inlineHelpText>
    <label>Sales Code</label>
    <type>Text</type>
</CustomField>