force-app/main/default/objects/Price_Parameter__c/fields/fxTaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>fxTaxPercentage__c</fullName>
    <formula>Quote__r.Opportunity.Account.VAT__c/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>