force-app/main/default/objects/Price_Parameter__c/fields/fxUnitCost__c.field-meta.xml
<CustomField>
    <fullName>fxUnitCost__c</fullName>
    <description>Cost of an Item per Unit</description>
    <formula>IF (Cost_Multiplier__c&gt;0,
   (IF ( Min_Sales_Price__c &gt;0 , 
         Min_Sales_Price__c + (Min_Sales_Price__c *( Cost_Multiplier__c -1)* ( Transmission__c /100)),
         Base_Price__c + (Base_Price__c *( Cost_Multiplier__c -1)* ( Transmission__c /100))
   )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxUnitCost</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>