force-app/main/default/objects/Price_Parameter__c/fields/fxUnitSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>fxUnitSalesPrice__c</fullName>
    <description>Sales Price of an Item per Unit</description>
    <formula>(IF ( Min_Sales_Price__c &gt;0 ,
         Min_Sales_Price__c + (Min_Sales_Price__c *( Price_Multiplier__c -1)* (Transmission__c/100)),
         Base_Price__c + (Base_Price__c *( Price_Multiplier__c -1)* (Transmission__c/100))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxUnitSalesPrice</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>