force-app/main/default/objects/Price_Parameter__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <inlineHelpText>List Price</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>