force-app/main/default/objects/Price_Parameter__c/fields/Min_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Price__c</fullName>
    <inlineHelpText>Min Price</inlineHelpText>
    <label>Min Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>