force-app/main/default/objects/Price_Parameter__c/fields/Min_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Sales_Price__c</fullName>
    <inlineHelpText>Min Sales Price</inlineHelpText>
    <label>Min Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>