force-app/main/default/objects/Price_Parameter__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Actual Sales Price (aka Selling Price)</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>