force-app/main/default/objects/Price_Parameter__c/fields/Price_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Price_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Price Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>