force-app/main/default/objects/Price_Parameter__c/fields/PriceList_Entry__c.field-meta.xml
<CustomField>
    <fullName>PriceList_Entry__c</fullName>
    <label>PriceList Entry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>