force-app/main/default/objects/Price_Parameter__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Quantity of an Item per Unit of Measure</description>
    <inlineHelpText>The Quantity of an Item per Product Group on a single Offer</inlineHelpText>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>