force-app/main/default/objects/Price_Parameter__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Price Parameters</relationshipLabel>
    <relationshipName>Price_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>