force-app/main/default/objects/Price_Parameter__c/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Commission to be transferred</description>
    <inlineHelpText>The Commission to be transferred</inlineHelpText>
    <label>Transmission</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>