force-app/main/default/objects/Price_Parameter__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <inlineHelpText>Unit Price</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>